argocd-deployment/apple-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apple-app-deployment
  namespace: apple
  labels:
    app: kube-app
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  selector:
    matchLabels:
      app: kube-app
  template:
    metadata:
      labels:
        app: kube-app
        version: v3
    spec:
      serviceAccountName: kube-stag-pvt-cluster-wl-id
      containers:
      - name: kubeappcontainer
        image: us-central1-docker.pkg.dev/stm-01/my-app-repo/my-tomcat-app:latest
        ports:
        - containerPort: 80
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 120
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        imagePullPolicy: Always
