argocd-deployment/apple-bg-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apple-bg-deployment
  namespace: apple
  labels:
    app: kube-bg
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    type: OnDelete
  selector:
    matchLabels:
      app: kube-bg
  template:
    metadata:
      labels:
        app: kube-bg
        version: v2
    spec:
      serviceAccountName: kube-stag-pvt-cluster-wl-id
      containers:
      - name: kubebgcontainer
        image: us-central1-docker.pkg.dev/stm-01/my-app-repo/my-app:latest
        ports:
        - containerPort: 80
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 120
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        imagePullPolicy: Always
